- homebridge configuration 기능 추가 - mqtt topic prefix 설정 추가

--- a/Hillstate-Gwanggyosan/uwsgi.ini.template
+++ b/Hillstate-Gwanggyosan/uwsgi.ini.template
@@ -11,6 +11,8 @@ callable = app
 ; daemonize = ./uwsgi.log
 uid = hillstate_gwanggyosan_server
 pidfile = ./uwsgi.pid
+plugin = python3
+virtualenv = ./venv
 
 ; master = true
 processes = 1
