--- a/Hillstate-Gwanggyosan/app_info.json
+++ b/Hillstate-Gwanggyosan/app_info.json
@@ -1,6 +1,6 @@
 {
-    "version": "1.1.7",
-    "date": "2025.05.16",
+    "version": "1.1.8",
+    "date": "2025.06.xx",
     "author": {
         "name": "yogyui",
         "email": "lee2002w@gmail.com",
