homebridge config 저장 방식 변경 (template으로)

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@
 /Hillstate-Gwanggyosan/test.sh
 /Hillstate-Gwanggyosan/config.xml
 /Hillstate-Gwanggyosan/uwsgi.ini
+/Hillstate-Gwanggyosan/homebridge_config_template.json
 /Test
